[metadata]
name = tool
version = 0.0.1
author = Harry Downing
author_email = harry.downing17@gmail.com
description = COMP3200 project
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
project_urls =
  repository = https://github.com/harrydowning/comp3200-project
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
package_dir=
    = src
packages = find:
python_requires = >=3.6
install_requires =
  PyYAML
  docopt
  ply
  regex
  networkx

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    tool = tool.main:main