[metadata]
name = serl
version = attr: serl.constants.VERSION
author = Harry Downing
author_email = harry.downing17@gmail.com
description = Serl - A tool for creating and using languages
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
license = MIT
project_urls =
  Repository = https://github.com/harrydowning/serl
  Documentation = https://serl.readthedocs.io/en/latest/index.html
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
package_dir=
    = src
packages = find:
python_requires = >=3.11
install_requires =
  PyYAML
  docopt
  ply==3.11
  regex
  networkx
  jsonschema
  Pygments
  Pillow
  requests

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    serl = serl.main:main